<resources>
    <string name="app_name">GetBee</string>
    <string name="dialog_btn_close">Đóng</string>
    <string name="apierror">API lỗi</string>
    <string name="pleaseinputdata">Xin hãy nhập dữ liệu</string>
    <string name="logout">Đăng xuất</string>
    <string name="home">Trang chủ</string>
    <string name="input_search_key">Nhập từ khóa tìm kiếm</string>
    <string name="title_dialog_choose_send_cv">Lựa chọn phương thức</string>
    <string name="job_found"> công việc được tìm thấy</string>
    <string name="noti_title">Thông báo</string>
    <string name="carrer">Ngành nghề</string>
    <string name="city">Thành phố</string>
    <string name="all_carrer">Tất cả ngành nghề</string>
    <string name="all_city">Tất cả thành phố</string>
    <string name="all_country">Tất cả đất nước</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="choice_cv">Chọn hồ sơ của tôi</string>
    <string name="cv_found">hồ sơ được tìm thấy</string>
    <string name="edit">Sửa</string>
    <string name="cancel">Hủy</string>
    <string name="process_cv">Xử lý hồ sơ</string>
    <string name="cv_applyed">Hồ sơ đã được nộp</string>
    <string name="not_send">Chưa gửi</string>
    <string name="wait_approve">Chờ duyệt</string>
    <string name="approved">Đã duyệt</string>
    <string name="interviewd">Đã phỏng vấn</string>
    <string name="accept_offer">Đã nhận việc</string>
    <string name="cv_submited">Hồ sơ đã ứng tuyển</string>
    <string name="cv_submited_title">hồ sơ đã được nộp</string>
    <string name="info">Thông tin</string>
    <string name="exp">Kinh nghiệm</string>
    <string name="level">Trình độ</string>
    <string name="language">Ngoại ngữ</string>
    <string name="skill">Kỹ năng</string>
    <string name="detail_job">Chi tiết công việc</string>
    <string name="save_job">Lưu công việc</string>
    <string name="saved_job">Đã lưu việc</string>
    <string name="saved_job_noti">Đã lưu việc làm thành công</string>
    <string name="hiring">Đang tuyển</string>
    <string name="closed">Đã đóng</string>
    <string name="statistic">Thống kê</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="other_sex">Khác</string>
    <string name="job_saved"> công việc đã lưu</string>
    <string name="job_applyed"> công việc đã nộp</string>
    <string name="input_email">Bạn vui lòng nhập địa chỉ e-mail</string>
    <string name="input_pass">Bạn vui lòng nhập mật khẩu</string>
    <string name="mycv">Hồ sơ của tôi</string>
    <string name="cv_saved">Hồ sơ đã lưu</string>
    <string name="cv_applyed_tit">Đã nộp hồ sơ</string>
    <string name="cv_saved_found">Hồ sơ đã lưu được tìm thấy</string>
    <string name="my_job">Công việc của tôi</string>
    <string name="input_name">Bạn vui lòng nhập họ và tên</string>
    <string name="input_phone">Bạn vui lòng nhập Số điện thoại liên hệ</string>
    <string name="email_esxit">Địa chỉ email này đã tồn tại trong hệ thống, vui lòng đăng ký e-mail khác</string>
    <string name="regist_succces">Bạn đã đăng ký tài khoản Cộng tác viên. Chúng tôi sẽ liên hệ với bạn trong vòng 24h hành chính để xác nhận thông tin đăng ký</string>
    <string name="status">Trạng thái</string>
    <string name="all_status">Tất cả trạng thái</string>
    <string name="choose">Chọn</string>
    <string name="not_save">Chưa lưu</string>
    <string name="saved">Lưu việc</string>
    <string name="applyed">Đã nộp</string>
    <string name="approve">Đã duyệt</string>
    <string name="seen">Đã xem</string>
    <string name="not_accept">Từ chối</string>
    <string name="invite_interview">Mời phỏng vấn</string>
    <string name="interviewed">Đã phỏng vấn</string>
    <string name="offered">Offer</string>
    <string name="go_to_work">Đi làm</string>
    <string name="contract">Ký hợp đồng</string>
    <string name="default_key">Mặc định</string>
    <string name="info_account">Thông tin cá nhân</string>
    <string name="hunt_reward">Mức thưởng dự kiến mà bạn sẽ nhận được:</string>
    <string name="cv_reward_title">Chỉ gửi hồ sơ</string>
    <string name="cv_reward">Mức thưởng dự kiến mà bạn sẽ nhận được: </string>
    <string name="contact_content">Vui lòng liên hệ hotline: 024 666 29448 hoặc getbee@vietinterview.com để được trợ giúp</string>
    <string name="wrong_acc">Tài khoản đăng nhập hoặc mật khẩu của bạn không đúng. Xin vui lòng nhập lại!</string>
    <string name="type_old_pass">Nhập mật khẩu cũ</string>
    <string name="type_new_pass">Nhập mật khẩu mới</string>
    <string name="retype_new_pass">Nhập lại mật khẩu mới</string>
    <string name="apply_cv">Nộp hồ sơ</string>
    <string name="position">Cấp bậc</string>
    <string name="location">Địa điểm</string>
    <string name="pub_date">Ngày đăng tuyển</string>
    <string name="exp_date">Thời hạn tuyển</string>
    <string name="salary">Lương ứng viên</string>
    <string name="reward_ctv">Thưởng cộng tác viên</string>
    <string name="quantity_hiring">Số lượng cần tuyển</string>
    <string name="cv_send">Hồ sơ đã được gửi</string>
    <string name="job_des">Mô tả công việc</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="sex">Giới tính</string>
    <string name="address">Địa chỉ</string>
    <string name="married">Tình trạng hôn nhân</string>
    <string name="position_wish">Vị trí mong muốn</string>
    <string name="level_current">Cấp bậc hiện tại</string>
    <string name="level_wish">Cấp bậc mong muốn</string>
    <string name="location_work">Địa điểm làm việc</string>
    <string name="exp_years">Tổng số năm kinh nghiệm</string>
    <string name="salary_wish">Mong muốn mức lương tối thiểu</string>
    <string name="target">Mục tiêu nghề nghiệp</string>
    <string name="level_qualification">Trình độ và bằng cấp</string>
    <string name="login">Đăng nhập</string>
    <string name="login_with_acc">Đăng nhập bằng tài khoản của bạn</string>
    <string name="forgot_pass">Bạn quên mật khẩu?</string>
    <string name="not_have_acc">Bạn chưa có tài khoản? </string>
    <string name="regist"> Đăng Ký</string>
    <string name="fullname">Họ và tên</string>
    <string name="pass">Mật khẩu</string>
    <string name="carrer_hunt">Ngành nghề muốn cộng tác</string>
    <string name="create_new_acc">Tạo một tài khoản mới</string>
    <string name="have_acc">Bạn đã có tài khoản?</string>
    <string name="skill_main">Kỹ năng chính</string>
    <string name="other_skill">Kỹ năng khác</string>
    <string name="candidate_applied">Ứng viên đã ứng tuyển</string>
    <string name="candidate_send">Số ứng viên đã gửi</string>
    <string name="contributer_interest">Số cộng tác viên đã quan tâm</string>
    <string name="candidate_interviewed">Số ứng viên đã phỏng vấn</string>
    <string name="candidate_offered">Số ứng viên đã Offer</string>
    <string name="candidate_work">Số ứng viên được nhận vào làm</string>
    <string name="my_candidate">Ứng viên của tôi</string>
    <string name="candidate_invite_interview">Số ứng viên được mời phỏng vấn</string>
    <string name="money_reward">Tiền thưởng</string>
    <string name="company_organization">Tên công ty/ tổ chức</string>
    <string name="human_resource">Quy mô nhân sự</string>
    <string name="job_title">Chức danh</string>
    <string name="work_time">Thời gian làm việc</string>
    <string name="salary_level">Mức lương</string>
    <string name="achievement">Thành tích đạt được</string>
    <string name="listen">Nghe</string>
    <string name="speak">Nói</string>
    <string name="read">Đọc</string>
    <string name="write">Viết</string>
    <string name="degree_certificate">Tên bằng cấp/chứng chỉ</string>
    <string name="school_training">Trường/đơn vị đào tạo</string>
    <string name="time">Thời gian</string>
    <string name="specialized">Chuyên nghành</string>
    <string name="graduation_type">Loại tốt nghiệp</string>
    <string name="greeting">Xin chào,</string>
    <string name="update">Cập nhật: </string>
    <string name="error_please_try">Không kết nối được tới server, bạn vui lòng thử lại</string>
    <string name="good">Tốt</string>
    <string name="rather">Khá</string>
    <string name="medium">Trung bình</string>
    <string name="least">Kém</string>
    <string name="have_married">Đã kết hôn</string>
    <string name="not_have_married">Chưa kết hôn</string>
    <string name="delete">Xóa</string>
    <string name="job_saved_tit">Công việc đã lưu</string>
    <string name="job_applyed_tit">Công việc đã ứng tuyển</string>
    <string name="ic_pic1_intro">A B2B Marketplace for Employers and Recruitment Agencies</string>
    <string name="ic_pic2_intro">Vietnams Largest Recruitment Agencies Marketplace</string>
    <string name="ic_pic3_intro">1000s of quality recruiters working for you!</string>
    <string name="cv_applied_tit">Đã nộp hồ sơ</string>
    <string name="info_acc_tit">Thông tin cá nhân</string>
    <string name="saved_noti">Đã lưu việc làm thành công</string>
    <string name="cancel_save_noti">Đã hủy lưu việc</string>
    <string name="city_province">Tỉnh/Thành phố</string>
    <string name="conputer_skill_tit">Tin học</string>
    <string name="office_information">Tin học văn phòng</string>
    <string name="other_soft">Phần mềm khác</string>
    <string name="hunt_send_cv_noti">Hồ sơ của bạn đã được gửi tới NTD. Vui lòng kiểm tra trạng thái hồ sơ đã gửi trong mục "Hồ sơ đã ứng tuyển"</string>
    <string name="sent">Đã gửi</string>
    <string name="no_data">Không có thông tin</string>
    <string name="below_50">Dưới 50 người</string>
    <string name="from_50_to_100">Từ 50-100 người</string>
    <string name="above_100">Lớn hơn 100 người</string>
    <string name="above_500">Lớn hơn 500 người</string>
    <string name="average">Trung bình</string>
    <string name="emailorphoneexist">Ứng viên này đã được chính bạn hoặc CTV viên khác sử dụng và gửi đi. Bạn vui lòng chọn Hồ sơ khác</string>
    <string name="cvnotfound">Hồ sơ không tồn tại</string>
    <string name="cvalreadysubmitjob">Hồ sơ đã được apply vào job</string>
    <string name="no_cv_upload">Bạn chưa có hồ sơ ứng viên. Hãy nhanh tay tạo Hồ sơ ứng viên để kiếm thêm thu nhập</string>
    <string name="save_profile_success">Lưu thông tin thành công</string>
    <string name="save_profile_fail">Lưu thông tin thất bại</string>
    <string name="please_input_old_pass">Xin hãy nhập mật khẩu cũ</string>
    <string name="please_input_new_pass">Xin hãy nhập mật khẩu mới</string>
    <string name="please_input_retype_pass">Xin hãy nhập lại mật khẩu mới</string>
    <string name="compare_new_retype_pass">Mật khẩu mới không trùng , vui lòng nhập lại</string>
    <string name="compare_old_new_pass">Mật khẩu mới không được trùng với mật khẩu cũ</string>
    <string name="change_password_success">Thay đổi mật khẩu thành công</string>
    <string name="change_password_fail">Thay đổi mật khẩu thất bại</string>
    <string name="hobby">Sở thích</string>
    <string name="min_6_character">Mật khẩu hợp lệ từ 6 ký tự trở lên</string>
    <string name="choose_least_one">Vui lòng chọn ít nhất một lĩnh vực muốn cộng tác</string>
    <string name="no_choice_cv">Bạn chưa có hồ sơ ứng viên. Hãy nhanh tay tạo Hồ sơ ứng viên để kiếm thêm thu nhập</string>
    <string name="working_form">Hình thức làm việc</string>
    <string name="press_back_noti">Bấm back 2 lần để thoát ứng dụng</string>
    <string name="user_locked">Tài khoản của bạn bị tạm khóa, vui lòng liên hệ 024 666 29448 nếu cần hỗ trợ giải đáp</string>
    <string name="incorrect_password">Mật khẩu không đúng, vui lòng thử lại</string>
    <string name="job_requirement">Yêu cầu công việc</string>
    <string name="delete_cv_fail">Xóa hồ sơ không thành công</string>
    <string name="reject_mess3">Ghi chú</string>
    <string name="count_offer">Số lần offer</string>
    <string name="position_work">Vị trí làm việc</string>
    <string name="result_interview">Kết quả phỏng vấn</string>
</resources>